[gd_scene load_steps=14 format=2]

[ext_resource path="res://Control/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Control/GenerationSettingsScreen/SeedValue.gd" type="Script" id=2]
[ext_resource path="res://Control/GenerationSettingsScreen/Back.gd" type="Script" id=3]
[ext_resource path="res://Control/GenerationSettingsScreen/GenerateWorld.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void vertex() {
	VERTEX.x += cos(TIME + VERTEX.y + VERTEX.x) * 2.5;
	VERTEX.y += sin(TIME + VERTEX.y + VERTEX.x) * 2.5;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[node name="GenerationSettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -420, 10 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.25098, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Title" type="CenterContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Title"]
material = SubResource( 2 )
margin_left = 152.0
margin_top = 52.0
margin_right = 831.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.643137, 0.87451, 1 )
text = "Generation settings"
align = 1
valign = 1

[node name="Settings" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 984.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContainerLeft" type="VBoxContainer" parent="VBoxContainer/Settings"]
margin_right = 490.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="Seed" type="Label" parent="VBoxContainer/Settings/ContainerLeft"]
margin_top = 36.0
margin_right = 490.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "Seed (only numbers) :"
align = 1

[node name="BiomeType" type="Label" parent="VBoxContainer/Settings/ContainerLeft"]
margin_top = 117.0
margin_right = 490.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 5 )
text = "Biome Type :"
align = 1

[node name="ContainerRight" type="VBoxContainer" parent="VBoxContainer/Settings"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="SeedValue" type="LineEdit" parent="VBoxContainer/Settings/ContainerRight"]
margin_top = 28.0
margin_right = 490.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 6 )
script = ExtResource( 2 )

[node name="BiomeType" type="OptionButton" parent="VBoxContainer/Settings/ContainerRight"]
margin_top = 119.0
margin_right = 490.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 7 )
text = "Plain"
align = 1
items = [ "Flat", null, false, 0, null, "Plain", null, false, 1, null, "Hill", null, false, 2, null ]
selected = 1

[node name="CenterContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 376.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterLeft" type="CenterContainer" parent="VBoxContainer/CenterContainer3"]
margin_right = 490.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="VBoxContainer/CenterContainer3/CenterLeft"]
margin_left = 171.0
margin_top = 78.0
margin_right = 318.0
margin_bottom = 105.0
rect_min_size = Vector2( 147, 0 )
custom_fonts/font = SubResource( 8 )
text = "Back"
script = ExtResource( 3 )

[node name="CenterRight" type="CenterContainer" parent="VBoxContainer/CenterContainer3"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GenerateWorld" type="Button" parent="VBoxContainer/CenterContainer3/CenterRight"]
margin_left = 171.0
margin_top = 78.0
margin_right = 318.0
margin_bottom = 105.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 9 )
text = "Generate World"
script = ExtResource( 4 )
[connection signal="pressed" from="VBoxContainer/CenterContainer3/CenterLeft/Back" to="VBoxContainer/CenterContainer3/CenterLeft/Back" method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/CenterRight/GenerateWorld" to="VBoxContainer/CenterContainer3/CenterRight/GenerateWorld" method="_on_Button_pressed"]
